[gd_scene load_steps=50 format=3 uid="uid://dhl7acv7vm643"]

[ext_resource type="Script" path="res://player/player.gd" id="1_air24"]
[ext_resource type="Script" path="res://player/player_attack.gd" id="2_3wply"]
[ext_resource type="Script" path="res://player/player_controller.gd" id="2_mnq7s"]
[ext_resource type="Texture2D" uid="uid://blh32q6thnpxw" path="res://assets/m_slash_1.png" id="4_gdvg2"]
[ext_resource type="SpriteFrames" uid="uid://d0c24ccdbwm1i" path="res://player/player_frames.tres" id="4_y8iwo"]
[ext_resource type="Texture2D" uid="uid://dipuj1vp24mny" path="res://assets/slash_1.png" id="5_nytt0"]
[ext_resource type="Script" path="res://player/player_cards.gd" id="5_txiub"]
[ext_resource type="Script" path="res://cards/card_data.gd" id="6_08pen"]
[ext_resource type="Script" path="res://cards/windy_card.gd" id="7_w737a"]
[ext_resource type="Script" path="res://cards/fire_card.gd" id="7_yjkkw"]
[ext_resource type="Script" path="res://tint_fade.gd" id="8_wh2pv"]
[ext_resource type="Script" path="res://player/card_visual.gd" id="10_68xkr"]
[ext_resource type="Texture2D" uid="uid://bg3btqkcykiou" path="res://assets/square.png" id="11_e000r"]
[ext_resource type="Script" path="res://cards/card_inst.gd" id="12_40j0t"]
[ext_resource type="Animation" uid="uid://4gwrrbsodmfs" path="res://player/anim/hitbox/atk01.res" id="14_kt4pu"]
[ext_resource type="Animation" uid="uid://w4wpsuqfjuss" path="res://player/anim/hitbox/m_atk01.res" id="15_6idwx"]

[sub_resource type="Resource" id="Resource_td3oh"]
script = ExtResource("7_w737a")
displayName = &""

[sub_resource type="Resource" id="Resource_ivnyv"]
script = ExtResource("7_yjkkw")
displayName = &""

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcv76"]
size = Vector2(20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyvv1"]
atlas = ExtResource("4_gdvg2")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_valg5"]
atlas = ExtResource("4_gdvg2")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_818y6"]
atlas = ExtResource("4_gdvg2")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_je4qe"]
atlas = ExtResource("4_gdvg2")
region = Rect2(0, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xliis"]
atlas = ExtResource("4_gdvg2")
region = Rect2(32, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_45mcf"]
atlas = ExtResource("4_gdvg2")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xodio"]
atlas = ExtResource("4_gdvg2")
region = Rect2(0, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcw08"]
atlas = ExtResource("4_gdvg2")
region = Rect2(32, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ranu"]
atlas = ExtResource("4_gdvg2")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkj0g"]
atlas = ExtResource("4_gdvg2")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0p65"]
atlas = ExtResource("4_gdvg2")
region = Rect2(32, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_26la7"]
atlas = ExtResource("4_gdvg2")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8avfi"]
atlas = ExtResource("5_nytt0")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fajou"]
atlas = ExtResource("5_nytt0")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_07ahn"]
atlas = ExtResource("5_nytt0")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho275"]
atlas = ExtResource("5_nytt0")
region = Rect2(0, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_imk8a"]
atlas = ExtResource("5_nytt0")
region = Rect2(32, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4vrn"]
atlas = ExtResource("5_nytt0")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7x2u"]
atlas = ExtResource("5_nytt0")
region = Rect2(0, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ep2o"]
atlas = ExtResource("5_nytt0")
region = Rect2(32, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6h6k"]
atlas = ExtResource("5_nytt0")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw8bh"]
atlas = ExtResource("5_nytt0")
region = Rect2(0, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iccob"]
atlas = ExtResource("5_nytt0")
region = Rect2(32, 48, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_noq7c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyvv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_valg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_818y6")
}],
"loop": false,
"name": &"m_slash01",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je4qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xliis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45mcf")
}],
"loop": false,
"name": &"m_slash02",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xodio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcw08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ranu")
}],
"loop": false,
"name": &"m_slash03",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkj0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0p65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26la7")
}],
"loop": false,
"name": &"m_slash04",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8avfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fajou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07ahn")
}],
"loop": false,
"name": &"slash01",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho275")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imk8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4vrn")
}],
"loop": false,
"name": &"slash02",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7x2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ep2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6h6k")
}],
"loop": false,
"name": &"slash03",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw8bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iccob")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"slash04",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aay6f"]
size = Vector2(56, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwas6"]
size = Vector2(64, 44)

[sub_resource type="CircleShape2D" id="CircleShape2D_kqfk0"]
radius = 104.0

[sub_resource type="Animation" id="Animation_rcpck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotatable/ReleaseHitBox/release:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rotatable/HitBox/m_atk01:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rotatable/HitBox/atk01:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_37r37"]
resource_name = "new_animation"
length = 0.375006
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotatable/ReleaseHitBox/release:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6pmc"]
_data = {
"RESET": SubResource("Animation_rcpck"),
"atk01": ExtResource("14_kt4pu"),
"m_atk01": ExtResource("15_6idwx"),
"release": SubResource("Animation_37r37")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 32768
script = ExtResource("1_air24")

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("2_mnq7s")

[node name="PlayerAttack" type="Node" parent="."]
script = ExtResource("2_3wply")

[node name="PlayerCards" type="Node" parent="."]
script = ExtResource("5_txiub")
cards = Array[ExtResource("6_08pen")]([SubResource("Resource_td3oh"), SubResource("Resource_ivnyv")])

[node name="TintFade" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("8_wh2pv")
node = NodePath("../AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_xcv76")

[node name="Rotatable" type="Node2D" parent="."]
position = Vector2(0, -40)

[node name="ProjectileSpawnPoint" type="Marker2D" parent="Rotatable"]
position = Vector2(48, 16)

[node name="SlashAnimation" type="AnimatedSprite2D" parent="Rotatable"]
texture_filter = 1
position = Vector2(40, 12)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_noq7c")
animation = &"m_slash04"

[node name="RayCast2D" type="RayCast2D" parent="Rotatable"]
position = Vector2(0, 16)
target_position = Vector2(40, 0)

[node name="HitBox" type="Area2D" parent="Rotatable"]
position = Vector2(0, 40)
collision_layer = 0
collision_mask = 3

[node name="atk01" type="CollisionShape2D" parent="Rotatable/HitBox"]
position = Vector2(52, -23)
shape = SubResource("RectangleShape2D_aay6f")
disabled = true
debug_color = Color(0.907048, 0.247217, 0.448053, 0.42)

[node name="m_atk01" type="CollisionShape2D" parent="Rotatable/HitBox"]
position = Vector2(56, -26)
shape = SubResource("RectangleShape2D_lwas6")
disabled = true
debug_color = Color(0.907048, 0.247217, 0.448053, 0.42)

[node name="ReleaseHitBox" type="Area2D" parent="Rotatable"]
collision_layer = 2
collision_mask = 2

[node name="release" type="CollisionShape2D" parent="Rotatable/ReleaseHitBox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_kqfk0")
disabled = true
debug_color = Color(0.76149, 0.305463, 0.832745, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -48)
scale = Vector2(3, 3)
sprite_frames = ExtResource("4_y8iwo")
animation = &"pray"
frame_progress = 0.450312
flip_h = true

[node name="CardVisual" type="Node2D" parent="."]
script = ExtResource("10_68xkr")

[node name="CardInst" type="Sprite2D" parent="CardVisual"]
visible = false
modulate = Color(1, 0.627451, 1, 0.588235)
position = Vector2(0, -30.4)
scale = Vector2(0.2, 0.3)
texture = ExtResource("11_e000r")
script = ExtResource("12_40j0t")

[node name="CardInst2" type="Sprite2D" parent="CardVisual"]
visible = false
modulate = Color(1, 0.627451, 1, 0.588235)
position = Vector2(0, -30.4)
scale = Vector2(0.2, 0.3)
texture = ExtResource("11_e000r")
script = ExtResource("12_40j0t")

[node name="CardInst3" type="Sprite2D" parent="CardVisual"]
visible = false
modulate = Color(1, 0.627451, 1, 0.588235)
position = Vector2(0, -30.4)
scale = Vector2(0.2, 0.3)
texture = ExtResource("11_e000r")
script = ExtResource("12_40j0t")

[node name="CardInst4" type="Sprite2D" parent="CardVisual"]
visible = false
modulate = Color(1, 0.627451, 1, 0.588235)
position = Vector2(0, -30.4)
scale = Vector2(0.2, 0.3)
texture = ExtResource("11_e000r")
script = ExtResource("12_40j0t")

[node name="CardInst5" type="Sprite2D" parent="CardVisual"]
visible = false
modulate = Color(1, 0.627451, 1, 0.588235)
position = Vector2(0, -30.4)
scale = Vector2(0.2, 0.3)
texture = ExtResource("11_e000r")
script = ExtResource("12_40j0t")

[node name="CardInst6" type="Sprite2D" parent="CardVisual"]
visible = false
modulate = Color(1, 0.627451, 1, 0.588235)
position = Vector2(0, -30.4)
scale = Vector2(0.2, 0.3)
texture = ExtResource("11_e000r")
script = ExtResource("12_40j0t")

[node name="HitboxAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c6pmc")
}
